--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -12,17 +12,32 @@
 
 <body>
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <div class="container">
+    <div class="column sedans">
+      <img class="column-icon" src="/img/icon-sedans.svg">
+      <h1>Sedans</h1>
+      Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+      or on your next road trip.
+      <button>Learn More</button>
+    </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <div class="column suv">
+      <img class="column-icon" src="/img/icon-suvs.svg">
+      <h1>SUVs</h1>
+      Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+      and off-road adventures.
+      <button>Learn More</button>
+    </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+    <div class="column luxury">
+      <img class="column-icon" src="/img/icon-luxury.svg">
+      <h1>Luxury</h1>
+      Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+      rental and arrive in style.
+      <button>Learn More</button>
+    </div>
+  </div>
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
