Added button active states

--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -16,13 +16,13 @@
     <div class="column sedans">
       <img class="column-icon" src="/img/icon-sedans.svg">
       <h1>Sedans</h1>
-      
+
       <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
 
-      <button>Learn More</button>
+      <button><a href="#">Learn More</a></button>
     </div>
 
     <div class="column suv">
@@ -34,7 +34,7 @@
         and off-road adventures.
       </p>
 
-      <button>Learn More</button>
+      <button><a href="#">Learn More</a></button>
     </div>
 
     <div class="column luxury">
@@ -45,7 +45,7 @@
         rental and arrive in style.
       </p>
 
-      <button>Learn More</button>
+      <button><a href="#">Learn More</a></button>
     </div>
   </div>
 
