--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -12,47 +12,51 @@
 
 <body>
   
-  <div class="container">
-    <div class="column sedans">
-      <img class="column-icon" src="/img/icon-sedans.svg">
-      <h1>Sedans</h1>
+  <div class="page-wrap">
+    <div class="container">
+      <div class="column sedans">
+        <img class="column-icon" src="/img/icon-sedans.svg">
+        <h1>Sedans</h1>
 
-      <p>
-        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-        or on your next road trip.
-      </p>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+          or on your next road trip.
+        </p>
 
-      <button><a href="#">Learn More</a></button>
+        <button><a href="#">Learn More</a></button>
+      </div>
+
+      <div class="column suv">
+        <img class="column-icon" src="/img/icon-suvs.svg">
+        <h1>SUVs</h1>
+
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+          and off-road adventures.
+        </p>
+
+        <button><a href="#">Learn More</a></button>
+      </div>
+
+      <div class="column luxury">
+        <img class="column-icon" src="/img/icon-luxury.svg">
+        <h1>Luxury</h1>
+        <p>
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+          rental and arrive in style.
+        </p>
+
+        <button><a href="#">Learn More</a></button>
+      </div>
     </div>
-
-    <div class="column suv">
-      <img class="column-icon" src="/img/icon-suvs.svg">
-      <h1>SUVs</h1>
-
-      <p>
-        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-        and off-road adventures.
-      </p>
-
-      <button><a href="#">Learn More</a></button>
-    </div>
-
-    <div class="column luxury">
-      <img class="column-icon" src="/img/icon-luxury.svg">
-      <h1>Luxury</h1>
-      <p>
-        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-        rental and arrive in style.
-      </p>
-
-      <button><a href="#">Learn More</a></button>
-    </div>
-  </div>
-
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    </div>
+
   </div>
+  
 </body>
 
 </html>
