Rearranged file structure

--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="styles.css">
   
   <title>Frontend Mentor | 3-Column Preview Card Component</title>
@@ -15,7 +15,7 @@
   <div class="page-wrap">
     <div class="container">
       <div class="column sedans">
-        <img class="column-icon" src="/img/icon-sedans.svg">
+        <img class="column-icon" src="img/icon-sedans.svg">
         <h1>Sedans</h1>
 
         <p>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="column suv">
-        <img class="column-icon" src="/img/icon-suvs.svg">
+        <img class="column-icon" src="img/icon-suvs.svg">
         <h1>SUVs</h1>
 
         <p>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="column luxury">
-        <img class="column-icon" src="/img/icon-luxury.svg">
+        <img class="column-icon" src="img/icon-luxury.svg">
         <h1>Luxury</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
