--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -15,7 +15,7 @@
   <div class="page-wrap">
     <div class="container">
       <div class="column sedans">
-        <img class="column-icon" src="img/icon-sedans.svg">
+        <img class="column-icon" src="img/icon-sedans.svg" alt="Sedans Icon">
         <h1>Sedans</h1>
 
         <p>
@@ -23,11 +23,11 @@
           or on your next road trip.
         </p>
 
-        <button><a href="#">Learn More</a></button>
+        <a href="#">Learn More</a>
       </div>
 
       <div class="column suv">
-        <img class="column-icon" src="img/icon-suvs.svg">
+        <img class="column-icon" src="img/icon-suvs.svg" alt="SUV Icon">
         <h1>SUVs</h1>
 
         <p>
@@ -35,18 +35,18 @@
           and off-road adventures.
         </p>
 
-        <button><a href="#">Learn More</a></button>
+        <a href="#">Learn More</a>
       </div>
 
       <div class="column luxury">
-        <img class="column-icon" src="img/icon-luxury.svg">
+        <img class="column-icon" src="img/icon-luxury.svg" alt="Luxury Icon">
         <h1>Luxury</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
           rental and arrive in style.
         </p>
 
-        <button><a href="#">Learn More</a></button>
+        <a href="#">Learn More</a>
       </div>
     </div>
   
