--- a/Frontend Mentor/3 Column Preview/src/index.html
+++ b/Frontend Mentor/3 Column Preview/src/index.html
@@ -14,9 +14,11 @@
   
   <div class="page-wrap">
     <div class="container">
+
+      <h1 class="sr-only">Car Rentals</h1>
       <div class="column sedans">
         <img class="column-icon" src="img/icon-sedans.svg" alt="Sedans Icon">
-        <h1>Sedans</h1>
+        <h2>Sedans</h2>
 
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
@@ -28,7 +30,7 @@
 
       <div class="column suv">
         <img class="column-icon" src="img/icon-suvs.svg" alt="SUV Icon">
-        <h1>SUVs</h1>
+        <h2>SUVs</h2>
 
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -40,7 +42,7 @@
 
       <div class="column luxury">
         <img class="column-icon" src="img/icon-luxury.svg" alt="Luxury Icon">
-        <h1>Luxury</h1>
+        <h2>Luxury</h2>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
           rental and arrive in style.
