More visual styling and animations

--- a/Expandable FAQ/index.html
+++ b/Expandable FAQ/index.html
@@ -15,6 +15,19 @@
         <article class="question">
             <div class="question-heading">
                 How will my plant arrive?
+                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
+                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
             </div>
             <div class="answer-text">
                 Our number one priority is that our plants arrive in happy, healthy condition. 
@@ -27,6 +40,19 @@
         <article class="question">
             <div class="question-heading">
                 Why does my plant look different than it does on the website?
+                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
+                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
             </div>
             <div class="answer-text">
                 Live plants and small batch pottery will have variations in color, texture, finish, and size. 
@@ -38,6 +64,19 @@
         <article class="question">
             <div class="question-heading">
                 My plant arrived damaged. What do I do?
+                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
+                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
             </div>
             <div class="answer-text">
                 Every plant is fragile and the shipping process is not always kind (or easy). Most of the time we 
@@ -56,6 +95,19 @@
         <article class="question">
             <div class="question-heading">
                 What types of payment options do you accept?
+                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
+                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                </svg>
             </div>
             <div class="answer-text">
                 We accept all major credit cards, PayPal, Apple Pay, and Google Pay. We also accept Afterpay, Klarna, 
