Flex positioning and hr

--- a/Expandable FAQ/index.html
+++ b/Expandable FAQ/index.html
@@ -9,112 +9,123 @@
 </head>
 
 <body>
-    <h1>General Questions</h1>
+    <div class="page-wrap">
 
-    <div id="questions-container">
-        <article class="question">
-            <div class="question-heading">
-                How will my plant arrive?
-                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
-                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
-                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
-                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
-                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
-                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-            </div>
-            <div class="answer-text">
-                Our number one priority is that our plants arrive in happy, healthy condition. 
-                Some of our plants ship directly potted in our earthenware plants, while others 
-                ship in their nursery grow pot placed inside the planter. How each plant ships is 
-                noted on its product page.  
-            </div>
-        </article>
+        <h1>General Questions</h1>
 
-        <article class="question">
-            <div class="question-heading">
-                Why does my plant look different than it does on the website?
-                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
-                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
-                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
-                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
-                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
-                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-            </div>
-            <div class="answer-text">
-                Live plants and small batch pottery will have variations in color, texture, finish, and size. 
-                While we make every effort to display our potted plants as accurately as possible, there may 
-                be subtle differences from what is displayed online.
-            </div>
-        </article>
-
-        <article class="question">
-            <div class="question-heading">
-                My plant arrived damaged. What do I do?
-                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
-                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
-                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
-                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
-                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
-                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-            </div>
-            <div class="answer-text">
-                Every plant is fragile and the shipping process is not always kind (or easy). Most of the time we 
-                get it right, but sometimes we don’t. When that happens, we fix it – be it a damaged plant or pot 
-                due to shipping carrier mishandling. Please inspect your package when you receive your delivery. 
-                Should your order arrive damaged, please fill out our contact form (make sure to include a photo) 
-                and we’ll get back to you in two business days. The form ensures we have what’s needed to help you 
-                as soon as possible! 
-                <br>
-                <br>
-                In the unlikely event a plant is received dead on arrival, it will always be replaced.
-            </div>
-        </article>
+        <div id="questions-container">
+            <article class="question">
+                <div class="question-heading">
+                    How will my plant arrive?
+                    <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                        256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                        8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                        19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                    <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                        0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                        19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                </div>
+                <div class="answer-text">
+                    Our number one priority is that our plants arrive in happy, healthy condition. 
+                    Some of our plants ship directly potted in our earthenware plants, while others 
+                    ship in their nursery grow pot placed inside the planter. How each plant ships is 
+                    noted on its product page.  
+                </div>
+                
+            </article>
 
 
-        <article class="question">
-            <div class="question-heading">
-                What types of payment options do you accept?
-                <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
-                    256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
-                    8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
-                    19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-                <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
-                    0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
-                    256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
-                    19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
-                </svg>
-            </div>
-            <div class="answer-text">
-                We accept all major credit cards, PayPal, Apple Pay, and Google Pay. We also accept Afterpay, Klarna, 
-                and PayLater which allows you to pay in installments.
-            </div>
-        </article>
+            <hr>
 
+            <article class="question">
+                <div class="question-heading">
+                    Why does my plant look different than it does on the website?
+                    <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                        256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                        8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                        19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                    <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                        0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                        19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                </div>
+                <div class="answer-text">
+                    Live plants and small batch pottery will have variations in color, texture, finish, and size. 
+                    While we make every effort to display our potted plants as accurately as possible, there may 
+                    be subtle differences from what is displayed online.
+                </div>
+            </article>
+
+            <hr>
+
+            <article class="question">
+                <div class="question-heading">
+                    My plant arrived damaged. What do I do?
+                    <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                        256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                        8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                        19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                    <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                        0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                        19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                </div>
+                <div class="answer-text">
+                    Every plant is fragile and the shipping process is not always kind (or easy). Most of the time we 
+                    get it right, but sometimes we don’t. When that happens, we fix it – be it a damaged plant or pot 
+                    due to shipping carrier mishandling. Please inspect your package when you receive your delivery. 
+                    Should your order arrive damaged, please fill out our contact form (make sure to include a photo) 
+                    and we’ll get back to you in two business days. The form ensures we have what’s needed to help you 
+                    as soon as possible! 
+                    <br>
+                    <br>
+                    In the unlikely event a plant is received dead on arrival, it will always be replaced.
+                </div>
+            </article>
+
+            <hr>
+
+
+            <article class="question">
+                <div class="question-heading">
+                    What types of payment options do you accept?
+                    <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
+                        256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H275.8v-79.3c0-10.9-8.9-19.8-19.8-19.8s-19.8 
+                        8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
+                        19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                    <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
+                        0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
+                        256 375.3 472.3 256 472.3z"/><path d="M355.1 234.4H156.9c-10.9 0-19.8 8.9-19.8 19.8s8.9 
+                        19.8 19.8 19.8h198.3c10.9 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
+                    </svg>
+                </div>
+                <div class="answer-text">
+                    We accept all major credit cards, PayPal, Apple Pay, and Google Pay. We also accept Afterpay, Klarna, 
+                    and PayLater which allows you to pay in installments.
+                </div>
+            </article>
+
+        </div>
 
     </div>
     
