Expand answer section via JS

--- a/Expandable FAQ/index.html
+++ b/Expandable FAQ/index.html
@@ -9,14 +9,19 @@
 </head>
 
 <body>
+    <!-- Page wrap for the purposes of positioning -->
     <div class="page-wrap">
 
         <h1>General Questions</h1>
 
         <div id="questions-container">
             <article class="question">
+
+                <!-- Question shown before expanding to reveal answer -->
                 <div class="question-heading">
                     How will my plant arrive?
+
+                    <!-- "Plus" icon to expand  -->
                     <svg class="btn btn-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                         <path d="M256 0C114.8 0 0 114.8 0 256s114.8 256 256 256 256-114.9 256-256S397.2 0 
                         256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
@@ -24,6 +29,7 @@
                         8.9-19.8 19.8v79.3h-79.3c-11 0-19.8 8.9-19.8 19.8s8.9 19.8 19.8 19.8h79.3v79.3c0 10.9 8.9 19.8 
                         19.8 19.8s19.8-8.9 19.8-19.8v-79.3h79.3c11 0 19.8-8.9 19.8-19.8S366.1 234.4 355.1 234.4z"/>
                     </svg>
+                    <!-- "Minus" icon to collapse -->
                     <svg class="btn btn-minus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                         <path d="M256 0C114.9 0 0 114.8 0 256s114.9 256 256 256c141.2 0 256-114.8 256-256S397.1 
                         0 256 0zM256 472.3c-119.3 0-216.3-97-216.3-216.3S136.7 39.7 256 39.7 472.3 136.7 472.3 
@@ -121,14 +127,15 @@
                 </div>
                 <div class="answer-text">
                     We accept all major credit cards, PayPal, Apple Pay, and Google Pay. We also accept Afterpay, Klarna, 
-                    and PayLater which allows you to pay in installments.
+                    and PayLater, which allows you to pay in installments.
                 </div>
             </article>
 
         </div>
 
     </div>
-    
+    <script src="app.js"></script>
+
 </body>
 
 </html>
