--- a/Frontend Mentor/FAQ Accordion Card/index.html
+++ b/Frontend Mentor/FAQ Accordion Card/index.html
@@ -5,36 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <div id="page-wrap">
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+    <div class="main-card-container">
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+      <div class="illustration-wrap">
+        <img class="illustration-background" src="img/bg-pattern-desktop.svg">
+        <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg">
+        <img class="illustration-box" src="img/illustration-box-desktop.svg">
+      </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+        <div class="accordion-menu-container">
+          <h1>FAQ</h1>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+          <div class="question">
+            <div class="question-heading">How many team members can I invite?</div>
+            
+            <div class="answer-text">
+            You can invite up to 2 additional users on the Free plan. There is no limit on 
+            team members for the Premium plan.
+            </div>
+          </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+
+          <div class="question">
+            <div class="question-heading">What is the maximum file upload size?</div>
+
+            <div class="answer-text">
+            No more than 2GB. All files in your account must fit your allotted storage space.
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="question-heading">How do I reset my password?</div>
+
+            <div class="answer-text">
+            Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.
+            </div>
+          </div>
+
+
+          <div class="question">
+            <div class="question-heading">Can I cancel my subscription?</div>
+            
+            <div class="answer-text">
+            Yes! Send us a message and we’ll process your request no questions asked.
+            </div>
+          </div>  
+
+
+          <div class="question">
+            <div class="question-heading">Do you provide additional support?</div>
+
+            <div class="answer-text">
+            Chat and email support is available 24/7. Phone lines are open during normal business hours.
+            </div>
+          </div>  
+
+        </div>
+    </div>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
+    </div>
+
   </div>
+
 </body>
 </html>
