--- a/Frontend Mentor/FAQ Accordion Card/index.html
+++ b/Frontend Mentor/FAQ Accordion Card/index.html
@@ -13,15 +13,18 @@
   <div id="page-wrap">
 
     <div class="main-card-container">
-
-      <div class="illustration-wrap">
-        <img class="illustration-background" src="img/bg-pattern-desktop.svg">
-        <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg">
+      <div class="left-column">
+        <div class="illustration-wrap">
+          <img class="illustration-background" src="img/bg-pattern-desktop.svg">
+          <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg"> 
+        </div>
         <img class="illustration-box" src="img/illustration-box-desktop.svg">
-      </div>
+      </div>  
+
+      <div class="right-column">
+        <h1>FAQ</h1>
 
         <div class="accordion-menu-container">
-          <h1>FAQ</h1>
 
           <div class="question">
             <div class="question-heading">How many team members can I invite?</div>
@@ -70,6 +73,7 @@
           </div>  
 
         </div>
+      </div>
     </div>
 
     <div class="attribution">
