--- a/Frontend Mentor/FAQ Accordion Card/index.html
+++ b/Frontend Mentor/FAQ Accordion Card/index.html
@@ -14,11 +14,12 @@
 
     <div class="main-card-container">
       <div class="left-column">
+        <!--
         <div class="illustration-wrap">
-          <img class="illustration-background" src="img/bg-pattern-desktop.svg">
-          <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg"> 
-        </div>
-        <img class="illustration-box" src="img/illustration-box-desktop.svg">
+          <img class="illustration-background" src="img/bg-pattern-desktop.svg" alt="Background Illustration">
+          <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg" alt="Woman Illustration"> 
+        </div>-->
+        <img class="illustration-box" src="img/illustration-box-desktop.svg" alt="Box Illustration">
       </div>  
 
       <div class="right-column">
@@ -27,7 +28,10 @@
         <div class="accordion-menu-container">
 
           <div class="question">
-            <div class="question-heading">How many team members can I invite?</div>
+            <div class="question-heading">
+              How many team members can I invite?
+              <img class="btn arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow Down">
+            </div>
             
             <div class="answer-text">
             You can invite up to 2 additional users on the Free plan. There is no limit on 
@@ -35,18 +39,26 @@
             </div>
           </div>
 
+          <hr>
 
           <div class="question">
-            <div class="question-heading">What is the maximum file upload size?</div>
+            <div class="question-heading">
+              What is the maximum file upload size?
+              <img class="btn arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow Down">
+            </div>
 
             <div class="answer-text">
             No more than 2GB. All files in your account must fit your allotted storage space.
             </div>
           </div>
 
+          <hr>
 
           <div class="question">
-            <div class="question-heading">How do I reset my password?</div>
+            <div class="question-heading">
+              How do I reset my password?
+              <img class="btn arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow Down">
+            </div>
 
             <div class="answer-text">
             Click “Forgot password” from the login page or “Change password” from your profile page.
@@ -54,23 +66,33 @@
             </div>
           </div>
 
+          <hr>
 
           <div class="question">
-            <div class="question-heading">Can I cancel my subscription?</div>
+            <div class="question-heading">
+              Can I cancel my subscription?
+              <img class="btn arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow Down">
+            </div>
             
             <div class="answer-text">
             Yes! Send us a message and we’ll process your request no questions asked.
             </div>
           </div>  
 
+          <hr>
 
           <div class="question">
-            <div class="question-heading">Do you provide additional support?</div>
+            <div class="question-heading">
+              Do you provide additional support?
+              <img class="btn arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow Down">
+            </div>
 
             <div class="answer-text">
             Chat and email support is available 24/7. Phone lines are open during normal business hours.
             </div>
           </div>  
+
+          <hr>
 
         </div>
       </div>
@@ -81,7 +103,8 @@
       Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
     </div>
 
-  </div>
 
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
