Working mobile version

--- a/Frontend Mentor/FAQ Accordion Card/index.html
+++ b/Frontend Mentor/FAQ Accordion Card/index.html
@@ -14,15 +14,14 @@
 
     <div class="main-card-container">
       <div class="left-column">
-        <!--
-        <div class="illustration-wrap">
-          <img class="illustration-background" src="img/bg-pattern-desktop.svg" alt="Background Illustration">
-          <img class="illustration-woman" src="img/illustration-woman-online-desktop.svg" alt="Woman Illustration"> 
-        </div>-->
         <img class="illustration-box" src="img/illustration-box-desktop.svg" alt="Box Illustration">
       </div>  
 
       <div class="right-column">
+
+        <!-- Empty div to apply background image in mobile version -->
+        <div class="mobile-illustration-wrap"></div>
+
         <h1>FAQ</h1>
 
         <div class="accordion-menu-container">
