--- a/Frontend Mentor/Interactive Pricing/index.html
+++ b/Frontend Mentor/Interactive Pricing/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -19,24 +19,51 @@
     </div>
   </header>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+  <section class="main-card">
 
-  Pageviews
-  $ /month
+    <div class="price-explorer">
+      <div class="price-data-label">Pageviews</div>
+      <div class="price">$ </div><div class="price-data-label">/month</div>
 
-  Monthly Billing
-  Yearly Billing 25% discount
+      <div class="slider-container">
+        <input type="range" list="pageviews" value="2" min="0" max="4" step="1">
+        <datalist id="pageviews">
+          <option value="10K"></option>
+          <option value="50K"></option>
+          <option value="100K"></option>
+          <option value="500K"></option>
+          <option value="1M"></option>
+        </datalist>
 
-  Unlimited websites
-  100% data ownership
-  Email reports
+        
+      </div>
 
-  Start my trial
+      <p class="monthly-label">Monthly Billing</p>
+
+      <label class="toggle">
+        <input type="checkbox">
+        <span class="slider"></span>
+      </label>
+
+      <p class="yearly-label">Yearly Billing</p>
+      <div class="discount">25% discount</div>
+    </div>  
+
+    <div class="features">
+      <ul>
+        <li>Unlimited websites</li>
+        <li>100% data ownership</li>
+        <li>Email reports</li>
+      </ul>
+
+      <a href="#">Start my trial</a>
+    </div>
+
+  </section>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Alexandria Peterson</a>.
   </div>
 
   <script src="app.js"></script>
