Finished mobile layout and style

--- a/Frontend Mentor/Interactive Pricing/index.html
+++ b/Frontend Mentor/Interactive Pricing/index.html
@@ -46,10 +46,7 @@
         <div class="billing">
           <p class="monthly-label">Monthly Billing</p>
 
-          <label class="toggle">
-            <input type="checkbox">
-            <span class="switch"></span>
-          </label>
+          <input class="toggle" type="checkbox">
 
           <p class="yearly-label">Yearly Billing</p>
         </div>
