Added JS functionality

--- a/Frontend Mentor/Interactive Pricing/index.html
+++ b/Frontend Mentor/Interactive Pricing/index.html
@@ -25,7 +25,10 @@
     <section class="main-card">
 
       <div class="price-explorer">
-        <div class="pageviews">100K Pageviews</div>
+        <div class="pageviews-container">
+          <div class="pageview-number">100K</div>
+          Pageviews
+        </div>
 
         <div class="price-container">
           <div class="price">$16.00</div>
