--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -11,20 +11,39 @@
 </head>
 
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
 
-  Immersive experiences that deliver
+  <div id="hero">
+    <header>
+      <div id="logo"><img src="img/logo.svg" alt="Loopstudios Logo"></div>
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </nav>
 
+      <div id="hamburger-menu">
+        <img src="img/icon-hamburger.svg" alt="Hamburger Menu Icon">
+      </div>
+
+
+    </header>
+
+    <div class="hero-message">Immersive experiences that deliver</div>
+  </div>
+
+  <div class="">
   The leader in interactive VR
 
   Founded in 2011, Loopstudios has been producing world-class virtual reality 
   projects for some of the best companies around the globe. Our award-winning 
   creations have transformed businesses through digital experiences that bind 
   to their brand.
+  </div>
+
 
   Our creations
 
