Mobile hamburger menu functionality

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -14,8 +14,13 @@
 
   <div id="hero">
     <header>
-      <div id="logo"><img src="img/logo.svg" alt="Loopstudios Logo"></div>
-      <nav>
+      <div class="logo"><img src="img/logo.svg" alt="Loopstudios Logo"></div>
+      
+
+      <input id="hamburger-menu-icon" type="checkbox">
+ 
+
+      <nav id="header-navigation">
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Careers</a></li>
@@ -24,10 +29,7 @@
           <li><a href="#">Support</a></li>
         </ul>
       </nav>
-
-      <div id="hamburger-menu">
-        <img src="img/icon-hamburger.svg" alt="Hamburger Menu Icon">
-      </div>
+    
 
 
     </header>
@@ -58,18 +60,25 @@
   The curiosity
   Make it fisheye
 
-  About
-  Careers
-  Events
-  Products
-  Support
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Support</a></li>
+      </ul>
+    </nav>  
 
-  © 2021 Loopstudios. All rights reserved.
+    © 2021 Loopstudios. All rights reserved.
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/alexvalpeter">Alex Peterson</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/alexvalpeter">Alex Peterson</a>.
+    </div>
+
+  </footer>
 
   <script src="app.js"></script>
 </body>
