Mobile leader section layout and styling

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -34,31 +34,36 @@
 
     </header>
 
-    <div class="hero-message">Immersive experiences that deliver</div>
+    <h1>Immersive experiences that deliver</h1>
   </div>
 
-  <div class="">
-  The leader in interactive VR
+  <section class="leader">
+    <img src="img/mobile/image-interactive.jpg">
+    <h2>The leader in interactive VR</h2>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
-  </div>
+    <p>
+      Founded in 2011, Loopstudios has been producing world-class virtual reality
+      projects for some of the best companies around the globe. Our award-winning
+      creations have transformed businesses through digital experiences that bind
+      to their brand.
+    </p>
+    
+  </section>
 
+  <section class="our-creations">
+    <h2>Our creations</h2>
 
-  Our creations
+    See all
 
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
+    Deep earth
+    Night arcade
+    Soccer team VR
+    The grid
+    From up above VR
+    Pocket borealis
+    The curiosity
+    Make it fisheye
+  </section>
 
   <footer>
     <nav>
