--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -47,23 +47,42 @@
       creations have transformed businesses through digital experiences that bind
       to their brand.
     </p>
-    
+
   </section>
 
   <section class="our-creations">
     <h2>Our creations</h2>
 
-    See all
+    <a class="see-all" href="#">See all</a>
 
-    Deep earth
-    Night arcade
-    Soccer team VR
-    The grid
-    From up above VR
-    Pocket borealis
-    The curiosity
-    Make it fisheye
+    <div class="thumbnail-container">
+      <div class="thumbnail deep-earth">
+        <div class="title">Deep<br>Earth</div>
+      </div>
+      <div class="thumbnail night-arcade">
+        <div class="title">Night<br>arcade</div>
+      </div>
+      <div class="thumbnail soccer-team">
+        <div class="title">Soccer<br>Team VR</div>
+      </div>
+      <div class="thumbnail grid">
+        <div class="title">The<br>grid</div>
+      </div>
+      <div class="thumbnail from-above">
+        <div class="title">From up<br>above VR</div>
+      </div>
+      <div class="thumbnail pocket-borealis">
+        <div class="title">Pocket<br>borealis</div>
+      </div>
+      <div class="thumbnail curiosity">
+        <div class="title">The<br>curiosity</div>
+      </div>
+      <div class="thumbnail fisheye">
+        <div class="title">Make it<br>fisheye</div>
+      </div>
+    </div>
   </section>
+
 
   <footer>
     <nav>
