Full mobile layout

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -85,6 +85,7 @@
 
 
   <footer>
+    <div class="logo"><img src="img/logo.svg" alt="Loopstudios Logo"></div>
     <nav>
       <ul>
         <li><a href="#">About</a></li>
@@ -95,7 +96,21 @@
       </ul>
     </nav>  
 
-    © 2021 Loopstudios. All rights reserved.
+    <div class="social-icons">
+      <a href="#">
+        <img class="social-icon facebook" src="img/icon-facebook.svg">
+      </a>
+      <a href="#">
+        <img class="social-icon twitter" src="img/icon-twitter.svg">
+      </a>
+      <a href="#">
+        <img class="social-icon pinterest" src="img/icon-pinterest.svg">
+      </a>
+      <a href="#">
+        <img class="social-icon instagra" src="img/icon-instagram.svg">
+      </a>
+    </div>
+    <div class="copyright">© 2021 Loopstudios. All rights reserved.</div>
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
@@ -106,4 +121,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
