Responsive tablet design adjustments

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -34,12 +34,12 @@
 
     </header>
 
-    <h1>Immersive experiences that deliver</h1>
+    <h1>Immersive experiences<br>that deliver</h1>
   </div>
 
   <section class="leader">
     <img src="img/mobile/image-interactive.jpg">
-    <h2>The leader in interactive VR</h2>
+    <h2>The leader in<br>interactive VR</h2>
 
     <p>
       Founded in 2011, Loopstudios has been producing world-class virtual reality
