Desktop hero layout

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -34,7 +34,7 @@
 
     </header>
 
-    <h1>Immersive experiences<br>that deliver</h1>
+    <h1>Immersive<br>experiences<br>that deliver</h1>
   </div>
 
   <section class="leader">
