--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -38,15 +38,21 @@
   </div>
 
   <section class="leader">
-    <img src="img/mobile/image-interactive.jpg">
-    <h2>The leader in<br>interactive VR</h2>
+    <div class="leader-content-wrap">
+      <img class="interactive-image-mobile" src="img/mobile/image-interactive.jpg">
+      <img class="interactive-image-desktop" src="img/desktop/image-interactive.jpg">
 
-    <p>
-      Founded in 2011, Loopstudios has been producing world-class virtual reality
-      projects for some of the best companies around the globe. Our award-winning
-      creations have transformed businesses through digital experiences that bind
-      to their brand.
-    </p>
+      <div class="leader-text">
+        <h2>The leader in<br>interactive VR</h2>
+
+        <p>
+          Founded in 2011, Loopstudios has been producing world-class virtual reality
+          projects for some of the best companies around the globe. Our award-winning
+          creations have transformed businesses through digital experiences that bind
+          to their brand.
+        </p>
+      </div>
+    </div>
 
   </section>
 
